[finishes #184020811] Fixed navigation overlap.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,10 +159,8 @@ footer {
 	font-size: .95em;
 }	
 
-
-
 /* Tablet */
-@media only screen and (max-width: 48rem) {
+@media only screen and (max-width: 75.5rem) {
 
 	#wrapper {
 		width: 100%;
@@ -195,7 +193,8 @@ footer {
 	}
 	
 	nav li {
-		padding: 0.5em 1em;
+		padding: 0.1em;
+		font-size: 20px;
 	}
 
 	#hero {
@@ -206,16 +205,29 @@ footer {
 }
 
 /* Mobile */
-@media only screen and (max-width: 30rem) { 
+@media only screen and (max-width: 40rem) { 
 
-	.hideMobile {
-		display: none;
+	body {
+		margin: 0;
+		padding: 0;
+		font-size: 100%;
 	}
-
-	img {
+	nav li {    
+		padding: 0;
+		margin: 1px 0;
+		border: 0;
+	}
+	nav li a {
+		padding: 0;
 		display: block;
-		padding-bottom: 2em;
-		margin: 0 auto;
-		width: 20em;
+		line-height: 3em;
+		width: 100%;
+		text-decoration: none;
+		margin: 0;
+		border: 0;
+
+	}
+	h2 {
+		margin-top: 21.4rem;
 	}
 }
